--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       gtag('config', 'G-49EVVXT1C0');
     </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
